restify compat with Java >= 12