@@ -6,7 +6,7 @@
 
   <groupId>com.inversoft</groupId>
   <artifactId>restify</artifactId>
-  <version>4.0.0</version>
+  <version>3.4.1</version>
   <packaging>jar</packaging>
 
   <name>Inversoft Java 8 REST Client</name>
@@ -52,9 +52,8 @@
   </scm>
 
   <properties>
-    <maven.compiler.release>14</maven.compiler.release>
-    <maven.compiler.source>14</maven.compiler.source>
-    <maven.compiler.target>14</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -81,7 +80,7 @@
     <dependency>
       <groupId>com.inversoft</groupId>
       <artifactId>jackson5</artifactId>
-      <version>3.0.0</version>
+      <version>2.4.6</version>
     </dependency>
 
     <dependency>
@@ -94,30 +93,6 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>14</source>
-          <target>14</target>
-          <fork>true</fork>
-          <executable>${JAVA_14_HOME}/bin/javac</executable>
-          <compilerVersion>14</compilerVersion>
-          <compilerArgs>
-            <arg>--add-exports</arg>
-            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <jvm>${JAVA_14_HOME}/bin/java</jvm>
-          <forkMode>once</forkMode>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
@@ -148,6 +123,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -156,6 +144,17 @@
       <id>release</id>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.8</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
